# vib3codeSDKv3.0.0

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CPP_CORE_ARCHITECTURE.md  DEVELOPMENT_SUMMARY.md  DEVLOG.md  DEV_TRACK.md  EXPERIENCE_PLAN.md  GLYPH_WAR.md  LICENSE  README.md  SDK_CRITICAL_REPORT.md  SECURITY.md  STRATEGIC_PLAN.md  TESTING_GUIDE.md  TESTING_VERIFICATION_REPORT.md  VIB34D-X-IMPLEMENTATION-PLAN.md  benchmark_sphere.mjs  benchmark_sphere_detailed.mjs  benchmark_sphere_edges_opt.mjs  browser-test.mjs  index-kirigami.html  index-v2.html  index.html  launcher.html  package-lock.json  package.json  plan.md  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  take-screenshots.mjs  vite.config.js  vitest.config.js  vitest.config.ts
.claude/: settings.json
.claude/commands/: vib3-design-ref.md  vib3-design.md  vib3-dev-ref.md  vib3-dev.md
.claude/hooks/: read-github-docs.sh  redteam-tests.sh  verify-deploy.sh
.claude/skills-package/: install-skills.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  canary.yml  ci.yml  deploy-pages.yml  docs-validation.yml  exports.yml  flutter-apk.yml  flutter-web.yml  gpu-visual-tests.yml  pages.yml  publish.yml  wasm-build.yml
.jules/: bolt.md
.storybook/: main.js  preview.js
DOCS/: AGENT_HARNESS_ARCHITECTURE.md  AGENT_PREMIUM_CONTEXT.md  ANDROID_DEPLOYMENT.md  ARCHITECTURE.md  ASSET_PACK_PLAYBOOK.md  BLUEPRINT_EXECUTION_PLAN_2026-01-07.md  CI_TESTING.md  CLI_ONBOARDING.md  CODEX_MIGRATION_PLAN.md  CODEX_RUNTIME_MIGRATION_MAP.md  CONTROL_REFERENCE.md  CROSS_SITE_DESIGN_PATTERNS.md  CSS_INTEGRATION_GUIDE.md  DEV_TRACK.md  DEV_TRACK_ANALYSIS.md  DEV_TRACK_PLAN_2026-01-07.md  DEV_TRACK_SESSION_2026-01-31.md  DEV_TRACK_SESSION_2026-02-06.md  ENV_SETUP.md  EPIC_SCROLL_EVENTS.md  EXPANSION_DESIGN.md  EXPANSION_DESIGN_ULTRA.md  EXPORT_FORMATS.md  GPU_DISPOSAL_GUIDE.md  HANDOFF_LANDING_PAGE.md  HANDOFF_PROMPT_2026-01-12.md  HANDOFF_SDK_DEVELOPMENT.md  LICENSING_TIERS.md  MASTER_PLAN_2026-01-31.md  MULTIVIZ_CHOREOGRAPHY_PATTERNS.md  OBS_SETUP_GUIDE.md  OPTIMIZATION_PLAN_MATH.md  PHASE4_COMPLETION_REPORT.md  PHASE4_CROSS_PLATFORM_PLAN.md  PHASE5_E2E_RUNBOOK.md  PHASE5_METRICS_COLLECTION_GUIDE.md  PHASE5_METRICS_REPORT.json  PHASE5_METRICS_SCHEMA.json  PHASE5_PRODUCTION_HARDENING_PLAN.md  PHASE5_TESTING_METRICS_PLAN.md  (+31 more)
DOCS/archive/: BLUEPRINT_EXECUTION_PLAN_2026-01-07.md  DEV_TRACK_ANALYSIS.md  STRATEGIC_BLUEPRINT_2026-01-07.md  SYSTEM_AUDIT_2026-01-30.md  WEBGPU_STATUS_2026-02-15_STALE.md
agent-config/: README.md  claude-agent-context.md  mcp-config.json  openai-agent-context.md
archive/: README.md
cpp/: CMakeLists.txt  build.sh
cpp/bindings/: c_api.cpp  c_api.h  embind.cpp
cpp/geometry/: Crystal.cpp  Fractal.cpp  GeometryGenerator.cpp  KleinBottle.cpp  Sphere.cpp  Tesseract.cpp  Tetrahedron.cpp  Torus.cpp  WarpFunctions.cpp  Wave.cpp
cpp/math/: Mat4x4.cpp  Mat4x4.hpp  Projection.cpp  Projection.hpp  Rotor4D.cpp  Rotor4D.hpp  Vec4.cpp  Vec4.hpp
cpp/src/: vib3_ffi.cpp
cpp/tests/: Geometry_test.cpp  Mat4x4_test.cpp  Projection_test.cpp  Rotor4D_test.cpp  Vec4_test.cpp
demo/: index.html
demo-assets/: api-examples.js  gallery-collection.json  geometry-00-base-tetrahedron.json  geometry-01-base-hypercube.json  geometry-02-base-sphere.json  geometry-03-base-torus.json  geometry-04-base-klein-bottle.json  geometry-05-base-fractal.json  geometry-06-base-wave.json  geometry-07-base-crystal.json  geometry-08-hypersphere-tetrahedron.json  geometry-09-hypersphere-hypercube.json  geometry-10-hypersphere-sphere.json  geometry-11-hypersphere-torus.json  geometry-12-hypersphere-klein-bottle.json  geometry-13-hypersphere-fractal.json  geometry-14-hypersphere-wave.json  geometry-15-hypersphere-crystal.json  geometry-16-hypertetrahedron-tetrahedron.json  geometry-17-hypertetrahedron-hypercube.json  geometry-18-hypertetrahedron-sphere.json  geometry-19-hypertetrahedron-torus.json  geometry-20-hypertetrahedron-klein-bottle.json  geometry-21-hypertetrahedron-fractal.json  geometry-22-hypertetrahedron-wave.json  geometry-23-hypertetrahedron-crystal.json  geometry-gallery.html
docs/: 03-post_cartesian_sublime.html  08-post_cartesian_sublime.html  09-crystalline_void_meditation.html  DEVELOPMENT_ROADMAP.md  index.html  test-hub.html  url-state.js  webgpu-live.html
dogfood/: index.html  vib3_visualization.html
examples/: audio-storm.html  card-lift-portal.html  css-synchronized.html  geometric-alpha-demo.js  layer-dynamics-demo.html  opal-choreography.html  synesthesia.html  vib3-demo-standalone.html  vib3-real-demo.html
flutter/: pubspec.yaml
flutter/linux/: CMakeLists.txt
flutter/windows/: CMakeLists.txt
geometric-alpha/: BETTING_SYSTEM.md  GETTING_STARTED.md  RED_TEAM_REPORT.md  SETUP_APIS.md  SYSTEM_GUIDE.md
integrated-demo/: index.html
outputs/: interactive-demo.html
scripts/: copy-dogfood-assets.js  generate-real-vib3.js  setup-environment.sh  setup-gpu-testing.sh  test-server.js
sdk/: e2e-results.json  e2e-test.js  index.html
site/: index.html
stories/: VIB3Engine.stories.js
styles/: accessibility.css  overlay-accents.css  reactivity-enhanced.css
test-results/: .last-run.json  TEST-REPORT.md  wasm-browser-test-results.json
tests/: audioBands.spec.js  bandSmoothing.spec.js  benchmark_rotor.mjs  benchmark_rotor_opt.mjs  colorMath.spec.js  comprehensive-e2e.spec.js  control-utils.test.js  dogfood.spec.js  e2e-harness.html  examples-test.js  highlightMath.spec.js  live-site.spec.js  lookaheadBuffer.spec.js  mobile-pin-audit.spec.js  repro_ortho_target.test.js  sdk-browser.spec.js  sequenceDirector.spec.js  shadowMath.spec.js  telemetry-cli.test.js  telemetry-director.test.js  tesseract.spec.js  triBandAnalysis.spec.js  verify.mjs  verify_mat4x4_fix.mjs  verify_rotor4d_optimization.mjs  verify_rotor_array.mjs  visual-regression.spec.js  wasm-browser-test.js
tools/: ensure-playwright.js  headless-renderer.js  shader-sync-verify.js  site-analyzer.mjs  update_projection.py  verify_math_opt.mjs
types/: accent.d.ts  adaptive-sdk.d.ts
(+829 files in other folders)
